<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>food-ordering-system</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.example</groupId>
			<artifactId>fos-auth</artifactId>
			<version>0.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.6.0</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>

		<dependency>
			<groupId>com.stripe</groupId>
			<artifactId>stripe-java</artifactId>
			<version>27.1.1</version>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-security</artifactId>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-oauth2-client</artifactId>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>-->
<!--		</dependency>-->

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webflux</artifactId>
			<version>6.2.0</version>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>com.google.http-client</groupId>-->
<!--			<artifactId>google-http-client</artifactId>-->
<!--			<version>1.40.0</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.google.api-client</groupId>-->
<!--			<artifactId>google-api-client</artifactId>-->
<!--			<version>2.7.0</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.google.oauth-client</groupId>-->
<!--			<artifactId>google-oauth-client</artifactId>-->
<!--			<version>1.36.0</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.google.apis</groupId>-->
<!--			<artifactId>google-api-services-oauth2</artifactId>-->
<!--			<version>v2-rev157-1.25.0</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.google.http-client</groupId>-->
<!--			<artifactId>google-http-client-gson</artifactId>-->
<!--			<version>1.40.0</version>-->
<!--		</dependency>-->


<!--		<dependency>-->
<!--			<groupId>io.jsonwebtoken</groupId>-->
<!--			<artifactId>jjwt-api</artifactId>-->
<!--			<version>0.11.5</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>io.jsonwebtoken</groupId>-->
<!--			<artifactId>jjwt-impl</artifactId>-->
<!--			<version>0.11.5</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>io.jsonwebtoken</groupId>-->
<!--			<artifactId>jjwt-jackson</artifactId>-->
<!--			<version>0.11.5</version>-->
<!--		</dependency>-->

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>-XX:+EnableDynamicAgentLoading</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
